2009-08-13  darren kenny  <darren.kenny@sun.com>

	* capplet/nwam_net_conf_panel.c: 
	  Fix defect#10625, disallow selection of an active ncu in an active
	  ncp, since that's not destroyable.
	* nwam_core/usr/include/libnwam.h:
	  Update to latest version.

2009-08-12  Darren Kenny  <darren.kenny@sun.com>

	* capplet/nwam_condition_vbox.c: 
	  Fix problem where apply() wasn't returning a value.
	* capplet/nwam_location_dialog.c: 
	  Add a filter to the activation combo box to prevent user selection
	  system as an option.
	* common/nwamui_env.c: 
	  Allow for the setting of no condtions, removing the assertion being
	  fired causing defect#9651.

2009-08-11  Lin Ma  <Lin.Ma@Sun.COM>

	reviewed by: <delete if not using a buddy>

	* capplet/nwam_location_dialog.c (nwam_location_dialog_init),
	(location_switch_loc_cb_toggled), (prof_switch_loc_manually):
	* daemon/status_icon.c (prof_switch_loc_manually),
	(on_activate_static_menuitems):

2009-08-11  Lin Ma  <Lin.Ma@Sun.COM>

	* common/nwamui_daemon.c (nwamui_daemon_class_init),
	(nwamui_daemon_set_property),
	(nwamui_daemon_handle_object_action_event):
	* common/nwamui_daemon.h:
	* daemon/status_icon.c (daemon_status_changed),
	(daemon_active_ncp_changed), (daemon_active_env_changed),
	(connect_nwam_object_signals), (daemon_status_is_good),
	(nwam_status_icon_run), (nwam_status_icon_finalize):
	Clean code, rework the gui daemon initial code.
	Uses nwamui_daemon_env_selection_set/is_manual code.

2009-08-11  Lin Ma  <Lin.Ma@Sun.COM>

	* common/nwamui_daemon.c (nwamui_daemon_class_init),
	(nwamui_daemon_set_property),
	(nwamui_daemon_handle_object_action_event):
	* common/nwamui_daemon.h:
	* daemon/status_icon.c (daemon_status_changed),
	(daemon_active_ncp_changed), (daemon_active_env_changed),
	(connect_nwam_object_signals), (daemon_status_is_good),
	(nwam_status_icon_run), (nwam_status_icon_finalize):
	A small change to prevent switch loc auto two times.
	Forgot change location dialog.
